--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
     ],
     "require": {
         "php-di/php-di": "^6.4",
-        "composer/composer": "^2.3"
+        "composer/composer": "^2.3",
+        "twig/twig": "^3.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9"
