--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "php-di/php-di": "^6.4",
         "composer/composer": "^2.3",
         "twig/twig": "^3.0",
-        "vlucas/phpdotenv": "^5.4"
+        "vlucas/phpdotenv": "^5.4",
+        "ramsey/uuid": "^4.3"
     },
     "require-dev": {
         "phpunit/phpunit": "^9"
